# quickcheck-v1

./: README.md  qcv1.cabal
src/: QuickCheck.hs
