cabal-version:      2.4
name:               qcv1
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Robert Krook
maintainer:         krookr@chalmers.se

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library QuickCheck
    build-depends: base, random
    exposed-modules: QuickCheck
    hs-source-dirs: src
    default-language: Haskell2010

executable qc
    build-depends: base, random, QuickCheck
    main-is: Main.hs
    hs-source-dirs: app
    default-language: Haskell2010
    ghc-options:
      -threaded
      -rtsopts
      -feager-blackholing
      -with-rtsopts=-N4
